tests/error/break_outside_loop.liva
// Error test: break outside loop
// Expected error: 'break' statement outside of loop

func main() {
    break  // ERROR: not in a loop
}
